@@ -1,5 +1,6 @@
 2020-06-23 Jan Kotanski <jan.kotanski@desy.de>
 	* add ToolResults support for Projections
+	* add ToolResults support for LineCut
 	* tagged as 2.43.1
 
 2020-06-22 Jan Kotanski <jan.kotanski@desy.de>
